fixed spacing of heading

--- a/client/src/components/css/Feed.css
+++ b/client/src/components/css/Feed.css
@@ -107,29 +107,23 @@
   width: 110px;
 }
 
-.teamFormation, .teamFormation-top {
+.teamFormation {
   font-family: Lekton-Bold;
   font-size: 22px;
   color: white;
-}
-
-.teamFormation-top {
-  text-align: center;
+  margin-left: 15px;
 }
 
 .switch-feed {
   padding: 1%;
 }
 
-.HackGTitle, .HackGTitle-top {
+.HackGTitle {
   color: white;
   text-shadow: 0px 0px 8px #ffffff;
   font-family: Bavro-Regular;
   font-size: 18px;
-}
-
-.HackGTitle-top {
-  text-align: center;
+  margin-left: 15px;
 }
 
 .team-info {
@@ -197,13 +191,13 @@
 }
 
 @media (min-width: 590px) {
-  .side-menu-top, .HackGTitle-top, .teamFormation-top {
+  .side-menu-top {
     display: none;
   }
 }
 
 @media (max-width: 590px) {
-  .side-menu, .HackGTitle, .teamFormation, .left-side {
+  .left-side {
     display: none;
   }
 }
