--- a/client/src/components/css/SideMenu.css
+++ b/client/src/components/css/SideMenu.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 @font-face {
